[package]
name = "joto_format"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.83"
publish = false

[dependencies]
joto_constants.workspace = true
joto_parse.workspace = true

[[bench]]
name = "format_bench"
harness = false

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
divan = "0.1.21"
