[package]
name = "joto_parse"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.79"

[dependencies]
joto_constants.workspace = true

[[bench]]
name = "parse_bench"
harness = false

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
divan = "0.1.21"
rand = "0.9"
